{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 38,
  "lineage": "c5c8056b-b8e2-e4f3-1310-82e46930da4a",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00adafae70b8029d8",
            "arn": "arn:aws:ec2:us-east-1:211125666158:instance/i-0bf59458379fbe12f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bf59458379fbe12f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "r2k",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b7fd575911a24a10"
              }
            ],
            "primary_network_interface_id": "eni-0b7fd575911a24a10",
            "private_dns": "ip-10-2-1-181.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.1.181",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:211125666158:key/8deaae11-08d4-4377-b6cf-9560df1729e8",
                "tags": {
                  "Environment": "dev",
                  "Name": "vm-1-root-volume",
                  "Owner": "rizwan"
                },
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Name": "vm-1-root-volume",
                  "Owner": "rizwan",
                  "Project": "Sprinklr"
                },
                "throughput": 125,
                "volume_id": "vol-070a1a59a38eb729c",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aafff3d931237869",
            "tags": {
              "name": "Sprinklr-dev-vm"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "Sprinklr",
              "name": "Sprinklr-dev-vm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fd6608926d86f820"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211125666158",
            "id": "i-0bf59458379fbe12f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2.aws_security_group.ec2_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125666158:security-group/sg-0fd6608926d86f820",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0fd6608926d86f820",
            "ingress": [],
            "name": "ec2-sg",
            "name_prefix": "",
            "owner_id": "211125666158",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "Sprinklr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0307e1a7e7a07372f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211125666158",
            "id": "sg-0fd6608926d86f820",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tcp_all_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3818659672",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0fd6608926d86f820",
            "security_group_rule_id": "sgr-034980dd92a3a43af",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_security_group.ec2_sg",
            "module.vpc.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125666158:subnet/subnet-0aafff3d931237869",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aafff3d931237869",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125666158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Sprinklr-dev-public-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Sprinklr-dev-public-subnet",
              "Project": "Sprinklr"
            },
            "vpc_id": "vpc-0307e1a7e7a07372f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211125666158",
            "id": "subnet-0aafff3d931237869",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125666158:vpc/vpc-0307e1a7e7a07372f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-08d9faf2451ba65db",
            "default_route_table_id": "rtb-0b0c393d41da13067",
            "default_security_group_id": "sg-0b8957db1b543d524",
            "dhcp_options_id": "dopt-089c03b0537b9ca75",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0307e1a7e7a07372f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b0c393d41da13067",
            "owner_id": "211125666158",
            "region": "us-east-1",
            "tags": {
              "Name": "Sprinklr-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Sprinklr-dev",
              "Project": "Sprinklr"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211125666158",
            "id": "vpc-0307e1a7e7a07372f",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}